--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -73,14 +73,14 @@
   <script src="{{ site.baseurl }}/dist/js/multiple-select.min.js"></script>
   <script src="{{ site.baseurl }}/dist/js/datatables.min.js"></script>
   {% endif %}
-  <!-- Automatically create anchors for documentation - not for production -->
+  <!-- Automatically create anchors for documentation - not for production
   <script async defer src="{{ site.baseurl }}/assets/js/vendor/anchor.min.js"></script>
   <script>
     $(function() {
       anchors.options.placement = 'left';
       anchors.add('.bs-docs-section > h1, .bs-docs-section > h2, .bs-docs-section > h3, .bs-docs-section > h4, .bs-docs-section > h5')
     });
-  </script>
+  </script>-->
 {% else %}
 <!--[if lt IE 9]>
 <script src="{{ site.baseurl }}/assets/js/ie8-responsive-file-warning.js"></script>
