--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -28,7 +28,7 @@
   margin-top: @grid-gutter-by-half;
 }
 
-.ccc-intro {
+#ccc-desc {
   font-size: 16px;
   @media all and (min-width: @screen-sm-min) {
     letter-spacing: 0.7px;
