--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -1,9 +1,9 @@
-<section class="ccc" tabindex="-1" role="dialog" aria-labelledby="ccc-title" aria-describedby="ccc-desc">
+<section class="ccc" aria-hidden="false" role="dialog" aria-labelledby="ccc-title" aria-describedby="ccc-desc">
   <div class="container ccc-popup" role="document">
     <header class="ccc-popup-header">
       <h2 id="ccc-title">Samtykke til brug af cookies</h2>
     </header>
-    <div class="ccc-intro" id="ccc-desc">
+    <div id="ccc-desc">
       <p>Vi vil gerne gemme oplysninger på din computer eller mobil (såkaldte cookies) for at forbedre din brugeroplevelse. Du kan altid ændre dit samtykke under "<a href="#">Cookie- og privatlivspolitik</a>" som du finder i bunden af hver side.
       </p>
     </div>
@@ -20,7 +20,7 @@
             <p>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</p>
           </div>
         </div>
-        <div class="ccc-table-wrapper" data-select="stat">
+        <div class="ccc-table-wrapper" data-select="statistics">
           <table class="table table-striped ccc-table">
             <caption class="sr-only">Statistikcookies</caption>
             <thead>
@@ -62,7 +62,7 @@
             <p>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</p>
           </div>
         </div>
-        <div class="ccc-table-wrapper" data-select="market">
+        <div class="ccc-table-wrapper" data-select="marketing">
           <table class="table table-striped ccc-table">
             <caption class="sr-only">Markedsføringscookies</caption>
             <thead>
