--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -15,7 +15,7 @@
             <span class="sr-only">Acceptér eller afslå cookies</span>
             <span class="checkmark"></span>
           </label>
-          <div class="ccc-select" data-select="stat">
+          <div class="ccc-select" data-select="statistics">
             <h3 class="ccc-select-title">Statistik (<span class="stat-count">3</span>)</h3>
             <p>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</p>
           </div>
@@ -57,7 +57,7 @@
             <span class="sr-only">Acceptér eller afslå cookies</span>
             <span class="checkmark"></span>
           </label>
-          <div class="ccc-select" data-select="market">
+          <div class="ccc-select" data-select="marketing">
             <h3 class="ccc-select-title">Markedsføring (<span class="market-count">31</span>)</h3>
             <p>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</p>
           </div>
