--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 </header>
-<nav id="kunav" class="navbar navbar-default navbar-static-top ku-nav">
+<nav id="kunav" aria-label="Global navigation" class="navbar navbar-default navbar-static-top ku-nav">
   <div class="container">
     <div id="navbar" class="navbar-collapse collapse">
       <ul id="navbar_menu" class="nav navbar-nav" role="menu" aria-label="menu">
