--- a/less/mixins.less
+++ b/less/mixins.less
@@ -47,3 +47,4 @@
 @import "mixins/ku-news.less";
 @import "mixins/ku-tiles.less";
 @import "mixins/ku-object-fit.less";
+@import "mixins/ku-page-full-width.less";
