--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -1,20 +1,23 @@
-@import "../../../../less/variables.less"; // Scroll progress bar
-// Paralax effect: https://github.com/nk-o/jarallax
+@import "../../../../less/variables.less";
+@import "../../../../less/mixins.less"; // Paralax effect: https://github.com/nk-o/jarallax
 // Page is 100% wide
 
-.progress {
-  margin: 0;
-  height: 6px;
-  position: fixed;
-  right: 0;
-  left: 0;
-  z-index: 1040;
+body {
+  background-color: @white-color;
 }
-
-.progress-fixed-top .progress-bar {
-  --scroll: 0;
-  background: linear-gradient(to right, rgb(@ku-red) var(--scroll), transparent 0);
-}
+// .progress {
+//   margin: 0;
+//   height: 6px;
+//   position: fixed;
+//   right: 0;
+//   left: 0;
+//   z-index: 1040;
+// }
+//
+// .progress-fixed-top .progress-bar {
+//   --scroll: 0;
+//   background: linear-gradient(to right, rgb(@ku-red) var(--scroll), transparent 0);
+// }
 // .ku-topbar {
 //   position: fixed;
 //   left: 0;
@@ -44,11 +47,7 @@
   &::after {
     width: calc(100vw - 9px);
     border-bottom: 1px solid @ku-red;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    position: relative;
+    .page-full-width();
   }
 }
 // #content {
@@ -78,14 +77,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  position: relative;
   z-index: 0;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  .page-full-width();
   // top + bottom shadow
   box-shadow: 0 -13px 30px 0 rgba(@gray-base,.3), 0 13px 30px 0 rgba(@gray-base,.3);
 
