--- a/less/mixins/ku-page-full-width.less
+++ b/less/mixins/ku-page-full-width.less
@@ -2,7 +2,7 @@
 // Usage: .page-full-width();
 
 .page-full-width() {
-  width: 100vw;
+  width: calc(100vw - 9px); // 9px is the width of the scrollbar
   position: relative;
   left: 50%;
   right: 50%;
