--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -1,6 +1,9 @@
 @import "../../../../less/variables.less";
 @import "../../../../less/mixins.less"; // Paralax effect: https://github.com/nk-o/jarallax
 // Page is 100% wide
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background-color: @white-color;
