New SUND colors

--- a/less/variables.less
+++ b/less/variables.less
@@ -105,13 +105,13 @@
 @teol-sub_4: #23499b;
 @teol-sub_4-hover: darken(@teol-sub_4, 5%);
 //Sund
-@sund-sub_1: #77b6e5;
+@sund-sub_1: #3b6bb2;
 @sund-sub_1-hover: darken(@sund-sub_1, 5%);
 @sund-sub_2: #0f4576;
 @sund-sub_2-hover: darken(@sund-sub_2, 5%);
 @sund-sub_3: #00706e;
 @sund-sub_3-hover: darken(@sund-sub_3, 5%);
-@sund-sub_4: #008000;
+@sund-sub_4: #054341;
 @sund-sub_4-hover: darken(@sund-sub_4, 5%);
 //Samf
 @samf-sub_1: #2a3d66;
