--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -240,12 +240,10 @@ html:lang(en) .ku-branding-text {
   background: none;
 }
 
-@media all and (min-width: 768px) {
-  .jumpboard {
-    height: 289px;
-  }
-
+@media all and (min-width: 992px) {
   .jumpboard .jumpcolumn {
+    display: -ms-flexbox;
+    display: flex;
     padding: 0;
     margin: 0;
   }
@@ -253,10 +251,42 @@ html:lang(en) .ku-branding-text {
   .jumpboard .jumpcolumn li {
     font-size: 22px;
     font-weight: 400;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-width: 0;
+    text-align: center;
+    border-bottom: 0;
+  }
+
+  .jumpboard .jumpcolumn li::before {
+    content: '';
+    width: 1px;
+    height: 47%;
+    position: absolute;
+    top: 15px;
+    right: 0;
+    background-color: #901a1e;
+  }
+
+  .jumpboard .jumpcolumn li:first-child::after {
+    content: '';
+    width: 1px;
+    height: 47%;
+    position: absolute;
+    top: 15px;
+    background-color: #901a1e;
+    left: 0;
   }
 
   .jumpboard .jumpcolumn li a:after {
-    right: 10px;
+    position: relative;
+    font-size: 16px;
+    top: -2px;
+    margin-left: 15px;
+  }
+
+  .jumpboard .jumpcolumn li a {
+    font-size: 26px;
   }
 
   .slick-slider {
