--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -281,7 +281,7 @@ html:lang(en) .ku-branding-text {
   .jumpboard .jumpcolumn li a:after {
     position: relative;
     font-size: 16px;
-    top: -2px;
+    /* top: -2px; See below for IE11 */
     margin-left: 15px;
   }
 
@@ -353,7 +353,11 @@ html:lang(en) .ku-branding-text {
     margin-right: 26px;
   }
 }
-
+@media all and (min-width: 992) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .jumpboard .jumpcolumn li a::after {
+    top: 5px;
+  }
+}
 @media all and (min-width: 992px) {
   .image-presentation {
     height: 600px;
