--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -480,3 +480,9 @@ form.gdpr-accept {
   border: 1px solid @state-danger-border;
   border-radius: @border-radius-base;
 }
+
+.sitemap {
+  li {
+    margin-top: 3px;
+  }
+}
