--- a/less/variables.less
+++ b/less/variables.less
@@ -198,11 +198,11 @@
 @font-size-small:         ceil((@font-size-base * 0.89)); // ~11px
 @ku-branding-text-font-size: ceil((@font-size-base * 1.5)); //18px
 
-@font-size-h1:            floor((@font-size-base * 2)); // ~24px
-@font-size-h2:            (@font-size-base * 1.7); // ~20.4px
-@font-size-h3:            (@font-size-base * 1.34); // ~16px
-@font-size-h4:            floor((@font-size-base * 1.2)); // ~14px
-@font-size-h5:            floor((@font-size-base * 1.1)); // ~13px
+@font-size-h1:            26px;
+@font-size-h2:            20px;
+@font-size-h3:            17px;
+@font-size-h4:            15px;
+@font-size-h5:            13px;
 @font-size-h6:            @font-size-base;
 
 // KU specific:
