Mobile menu selected view

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -483,6 +483,9 @@ form.gdpr-accept {
 
 .sitemap {
   li {
-    margin-top: 3px;
+    margin-top: 5px;
+    @media (min-width: @screen-sm) {
+      margin-top: 3px;
+    }
   }
 }
