--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -30,7 +30,7 @@
       color: @white-color;
       border-top: 1px solid darken(@ku-red, 5%);
 
-      &.mm-selected > a:not(.mm-btn_next) {
+      &.mm-listitem_selected > a:not(.mm-btn_next) {
         // selected view
         font-weight: 600;
         background: darken(@ku-red, 6%);
@@ -178,8 +178,6 @@
     }
 
     img {
-      // width: 55px;
-      // height: 55px;
       display: none;
     }
 
