--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -32,7 +32,7 @@
 
       &.mm-listitem_selected > a:not(.mm-btn_next) {
         // selected view
-        font-weight: 600;
+        font-weight: 700;
         background: darken(@ku-red, 6%);
       }
 
@@ -63,7 +63,9 @@
     padding-right: 20px;
     background-color: @ku-red;
     color: @white-color;
-    font-size: larger;
+    font-weight: 600;
+    letter-spacing: .7px;
+    font-size: @font-size-h3;
     border-bottom: solid 1px lighten(@ku-red, 7%);
   }
 
