--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -48,33 +48,33 @@
     <table class="table">
       <tbody>
         <tr>
-          <td><h1>h1. Bootstrap heading <small>Secondary text</small></h1></td>
+          <td><h1>h1. Bootstrap heading <div class="small">Secondary text</div></h1></td>
         </tr>
         <tr>
-          <td><h2>h2. Bootstrap heading <small>Secondary text</small></h2></td>
+          <td><h2>h2. Bootstrap heading <div class="small">Secondary text</div></h2></td>
         </tr>
         <tr>
-          <td><h3>h3. Bootstrap heading <small>Secondary text</small></h3></td>
+          <td><h3>h3. Bootstrap heading <div class="small">Secondary text</div></h3></td>
         </tr>
         <tr>
-          <td><h4>h4. Bootstrap heading <small>Secondary text</small></h4></td>
+          <td><h4>h4. Bootstrap heading <div class="small">Secondary text</div></h4></td>
         </tr>
         <tr>
-          <td><h5>h5. Bootstrap heading <small>Secondary text</small></h5></td>
+          <td><h5>h5. Bootstrap heading <div class="small">Secondary text</div></h5></td>
         </tr>
         <tr>
-          <td><h6>h6. Bootstrap heading <small>Secondary text</small></h6></td>
+          <td><h6>h6. Bootstrap heading <div class="small">Secondary text</div></h6></td>
         </tr>
       </tbody>
     </table>
   </div>
 {% highlight html %}
-<h1>h1. Bootstrap heading <small>Secondary text</small></h1>
-<h2>h2. Bootstrap heading <small>Secondary text</small></h2>
-<h3>h3. Bootstrap heading <small>Secondary text</small></h3>
-<h4>h4. Bootstrap heading <small>Secondary text</small></h4>
-<h5>h5. Bootstrap heading <small>Secondary text</small></h5>
-<h6>h6. Bootstrap heading <small>Secondary text</small></h6>
+<h1>h1. Bootstrap heading <div class="small">Secondary text</div></h1>
+<h2>h2. Bootstrap heading <div class="small">Secondary text</div></h2>
+<h3>h3. Bootstrap heading <div class="small">Secondary text</div></h3>
+<h4>h4. Bootstrap heading <div class="small">Secondary text</div></h4>
+<h5>h5. Bootstrap heading <div class="small">Secondary text</div></h5>
+<h6>h6. Bootstrap heading <div class="small">Secondary text</div></h6>
 {% endhighlight %}
 
 
