--- a/less/type.less
+++ b/less/type.less
@@ -22,8 +22,7 @@ h6 {
   color: @headings-color;
   letter-spacing: 0.7px;
 
-  .small,
-  small {
+  .small {
     font-weight: normal;
     line-height: 1;
     color: @headings-small-color;
@@ -54,8 +53,7 @@ h3 {
   margin-top: @line-height-computed;
   margin-bottom: 10px;
 
-  .small,
-  small {
+  .small {
     font-size: 75%;
   }
 }
@@ -69,8 +67,7 @@ h6 {
   margin-top: (@line-height-computed / 2);
   margin-bottom: (@line-height-computed / 2);
 
-  .small,
-  small {
+  .small {
     font-size: 75%;
   }
 }
