--- a/less/type.less
+++ b/less/type.less
@@ -86,7 +86,7 @@ h1 {
 h2 {
   font-size: @font-size-h2;
   @media (max-width: @screen-xs-max) {
-    font-size: floor((@font-size-h2 * 1.1));
+    font-size: floor((@font-size-h2 * 1.05));
   }
   font-weight: 600;
 }
@@ -98,6 +98,7 @@ h3 {
     font-size: floor((@font-size-h3 * 1.1));
   }
   font-weight: 600;
+  line-height: 1.5;
 }
 
 .h4,
