--- a/less/type.less
+++ b/less/type.less
@@ -84,9 +84,9 @@ h1 {
 
 .h2,
 h2 {
-  font-size: @font-size-h2;
-  @media (max-width: @screen-xs-max) {
-    font-size: floor((@font-size-h2 * 1.05));
+  font-size: floor((@font-size-h2 * 1.05));
+  @media (min-width: @screen-sm) {
+    font-size: @font-size-h2;
   }
   font-weight: 600;
   line-height: 1.5;
@@ -94,9 +94,9 @@ h2 {
 
 .h3,
 h3 {
-  font-size: @font-size-h3;
-  @media (max-width: @screen-xs-max) {
-    font-size: floor((@font-size-h3 * 1.1));
+  font-size: floor((@font-size-h3 * 1.1));
+  @media (min-width: @screen-sm) {
+    font-size: @font-size-h3;
   }
   font-weight: 600;
   line-height: 1.5;
@@ -104,27 +104,27 @@ h3 {
 
 .h4,
 h4 {
-  font-size: @font-size-h4;
-  @media (max-width: @screen-xs-max) {
-    font-size: floor((@font-size-h4 * 1.14));
+  font-size: floor((@font-size-h4 * 1.14));
+  @media (min-width: @screen-sm) {
+    font-size: @font-size-h4;
   }
   font-weight: 600;
 }
 
 .h5,
 h5 {
-  font-size: @font-size-h5;
-  @media (max-width: @screen-xs-max) {
-    font-size: floor((@font-size-h5 * 1.2));
+  font-size: floor((@font-size-h5 * 1.2));
+  @media (min-width: @screen-sm) {
+    font-size: @font-size-h5;
   }
   font-weight: 700;
 }
 
 .h6,
 h6 {
-  font-size: @font-size-h6;
-  @media (max-width: @screen-xs-max) {
-    font-size: floor((@font-size-h6 * 1.1));
+  font-size: floor((@font-size-h6 * 1.1));
+  @media (min-width: @screen-sm) {
+    font-size: @font-size-h6;
   }
   font-weight: 600;
 }
