--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -155,13 +155,12 @@ You can use the mark tag to <mark>highlight</mark> text.
   <p>Make use of HTML's default emphasis tags with lightweight styles.</p>
 
   <h3>Small text</h3>
-  <p>For de-emphasizing inline or blocks of text, use the <code>&lt;small&gt;</code> tag to set text at 85% the size of the parent. Heading elements receive their own <code>font-size</code> for nested <code>&lt;small&gt;</code> elements.</p>
-  <p>You may alternatively use an inline element with <code>.small</code> in place of any <code>&lt;small&gt;</code>.</p>
+  <p>For de-emphasizing inline or blocks of text, use the class <code>&lt;s.mall&gt;</code> to set text smaller than the size of the parent.</p>
   <div class="bs-example" data-example-id="simple-small">
-    <p><small>This line of text is meant to be treated as fine print.</small></p>
+    <div class="small">This line of text is meant to be treated as fine print.</div>
   </div>
 {% highlight html %}
-<small>This line of text is meant to be treated as fine print.</small>
+<div class="small">This line of text is meant to be treated as fine print.</div>
 {% endhighlight %}
 
 
@@ -182,11 +181,6 @@ You can use the mark tag to <mark>highlight</mark> text.
 {% highlight html %}
 <em>rendered as italicized text</em>
 {% endhighlight %}
-
-  <div class="bs-callout bs-callout-info" id="callout-type-b-i-elems">
-    <h4>Alternate elements</h4>
-    <p>Feel free to use <code>&lt;b&gt;</code> and <code>&lt;i&gt;</code> in HTML5. <code>&lt;b&gt;</code> is meant to highlight words or phrases without conveying additional importance while <code>&lt;i&gt;</code> is mostly for voice, technical terms, etc.</p>
-  </div>
 
   <h2 id="type-alignment">Alignment classes</h2>
   <p>Easily realign text to components with text alignment classes.</p>
