--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -389,6 +389,10 @@ nav[aria-label="Pager"] {
   }
 }
 
+.nyhedsdato {
+  margin-bottom: 5px;
+}
+
 .custom-search-results {
   .nyhedsliste_dato {
     color: @text-color!important;
@@ -477,7 +481,6 @@ nav[aria-label="Pager"] {
   }
 }
 // Events as grid elements
-
 .calendarTime {
   .text-muted;
   margin-top: 10px;
