--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -68,6 +68,7 @@
   font-size: 14px;
   letter-spacing: 0.7px;
   position: relative;
+  width: 100%;
   padding-right: @grid-gutter-width;
   padding-bottom: @grid-gutter-height;
   cursor: pointer;
