--- a/less/type.less
+++ b/less/type.less
@@ -476,7 +476,7 @@ h2 {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.7px;
-    margin: 0;
+    margin: 20px 0 0 0;
     padding: 0 5px 8px 0;
     border-bottom: 1px solid @ku-grey-border;
   }
