Right column top margin

--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -173,22 +173,25 @@ nav {
     margin-top: @grid-gutter-height;
   }
   @media (min-width: @screen-md) {
-    .rightbox {
-      &:first-child {
-        margin-top: @ku-rightcolumn-top;
-      }
-    }
-
-    & > .flexiblebox,
-    & > .flexiblebox-as-rightbox,
-    & > .gcitem,
-    & > .panel,
-    & > .rightbox-normal {
-      &:first-child {
-        margin-top: @ku-rightcolumn-top;
-      }
-    }
+    margin-top: @ku-rightcolumn-top;
   }
+  // @media (min-width: @screen-md) {
+  //   .rightbox {
+  //     &:first-child {
+  //       margin-top: @ku-rightcolumn-top;
+  //     }
+  //   }
+  //
+  //   & > .flexiblebox,
+  //   & > .flexiblebox-as-rightbox,
+  //   & > .gcitem,
+  //   & > .panel,
+  //   & > .rightbox-normal {
+  //     &:first-child {
+  //       margin-top: @ku-rightcolumn-top;
+  //     }
+  //   }
+  // }
 }
 
 .rightbox {
