New tab styling

--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -8,12 +8,14 @@
     <button class="btn btn-default" type="submit">Button</button>
     <input class="btn btn-default" type="button" value="Input">
     <input class="btn btn-default" type="submit" value="Submit">
+    <button onclick="location.href='http://www.example.com'" class="btn btn-default" type="button">Button with link</button>
   </form>
 {% highlight html %}
 <a class="btn btn-default" href="#" role="button">Link</a>
 <button class="btn btn-default" type="submit">Button</button>
 <input class="btn btn-default" type="button" value="Input">
 <input class="btn btn-default" type="submit" value="Submit">
+<button onclick="location.href='http://www.example.com'" class="btn btn-default" type="button">Button with link</button>
 {% endhighlight %}
 
   <div class="bs-callout bs-callout-warning" id="callout-buttons-context-usage">
