--- a/less/variables.less
+++ b/less/variables.less
@@ -598,7 +598,7 @@
 
 //=== Shared nav styles
 @nav-link-padding:                          10px 10px;
-@nav-link-hover-bg:                         @gray-lighter;
+@nav-link-hover-bg:                         @gray-light;
 @nav-link-border-radius:                   @border-radius-base;
 
 @nav-disabled-link-color:                   @gray-light;
@@ -610,9 +610,9 @@
 @nav-tabs-bg-color:                         #f3f3f3;
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             @gray-light;
-@nav-tabs-active-link-hover-color:          @white-color;
-@nav-tabs-active-link-hover-border-color:   @gray-light;
+@nav-tabs-active-link-hover-bg:             @white-color;
+@nav-tabs-active-link-hover-color:          @text-color;
+@nav-tabs-active-link-hover-border-color:   @gray;
 
 @nav-tabs-justified-link-border-color:            @gray-light;
 @nav-tabs-justified-active-link-border-color:     @white-color;
@@ -621,10 +621,10 @@
 @nav-pills-border-radius:                   @border-radius-base;
 @nav-pills-border-color:                     @gray;
 @nav-pills-bg-color:                        #f3f3f3;
-@nav-pills-active-link-hover-bg:            @gray-light;
+@nav-pills-active-link-hover-bg:            @gray;
 @nav-pills-active-link-hover-color:         @component-active-color;
 
-@ku-nav-tabs-and-pills-hover-bg-color:      #e7e7e7;
+@ku-nav-tabs-and-pills-hover-bg-color:      @gray-light;
 
 //== KU left menu
 //
