--- a/less/navs.less
+++ b/less/navs.less
@@ -274,7 +274,7 @@
 
 .tab-content {
   border: 1px solid @gray;
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 0 @border-radius-base @border-radius-base;
   padding: 10px;
 
   > .tab-pane {
