--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -189,7 +189,7 @@
 
 .ccc-buttons button {
   &:first-child {
-    margin-right: floor((@grid-gutter-width * 2));
+    margin-right: @grid-gutter-width;
     @media all and (min-width: @screen-sm-min) {
       margin-left: floor((@grid-gutter-width * 2));
     }
