--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -191,7 +191,7 @@
   &:first-child {
     margin-right: @grid-gutter-width;
     @media all and (min-width: @screen-sm-min) {
-      margin-left: floor((@grid-gutter-width * 2));
+      margin-left: 45px;
     }
   }
 }
