Gridforside right cloumn

--- a/docs/assets/css/doctypes/gridforside.css
+++ b/docs/assets/css/doctypes/gridforside.css
@@ -35,7 +35,7 @@ h1 {
     display: block;
   }
 
-  /* .GridForside .gridcontent>.row:first-child .gccolumn:last-child .rightbox:first-child .panel-title {
-    padding-top: 23px;
-  } */
+  .GridForside .gridcontent>.row:first-child .gccolumn:last-child .rightbox:first-child .panel {
+    margin-top: 23px;
+  }
 }
