Cookie popup tweaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -205,7 +205,7 @@
     padding: 10px;
 
     &:first-child {
-      margin-right: @grid-gutter-width;
+      margin-right: @grid-gutter-by-half;
     }
     @media (min-width: @screen-sm-min) {
       font-size: 18px;
