--- a/less/navs.less
+++ b/less/navs.less
@@ -113,6 +113,7 @@
       text-overflow: ellipsis;
       background-color: @gray-light;
       color: @white-color;
+      font-weight: 600;
       line-height: @line-height-base;
       border-radius: @nav-tabs-border-radius;
       text-decoration: none;
